Remove links for now.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
 </style>
 
 <div id=content>
-<main markdown>
-
+<main>
 <header>
   <img src=astrolabe.svg>
   <h1>Apollo Library of Technical Specifications</h1>
 </header>
-  
-## Specs available here
-- [edge](edge)
-- [using](using)
-
 </main>
 </div>
