And the title for now.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <script src=/boot.js></script>
-<title>Apollo Library of Technical Specifications</title>
+<title>Technical Specifications</title>
 <style>
   img[src="astrolabe.svg"] {
     display: table;
@@ -13,7 +13,6 @@
 <main>
 <header>
   <img src=astrolabe.svg>
-  <h1>Apollo Library of Technical Specifications</h1>
 </header>
 </main>
 </div>
