Center the astrolabe, remove unneeded document.write.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <title>Technical Specifications</title>
 <style>
   img[src="astrolabe.svg"] {
-    display: table;
-    margin: auto;
-    width: 50%;
+    position: fixed;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%) scale(0.5);
   }
 </style>
 
+
 <div id=view>
 <main>
-<header>
+<header>  
   <img src=astrolabe.svg>
 </header>
 </main>
