--- a/constellation.html
+++ b/constellation.html
@@ -134,7 +134,7 @@ directive @someSpec on FIELD_DEFINITION
 directive @core(spec: String) repeatable on SCHEMA_DEFINITION
 ```
 
-It may seem that core schemas don't do much on their own, and that's they don't do very much on their own! The core specification simply provides a way to clearly identify what a document *means* by a directive of a particular name. The specification URLs which define this behavior are *not* themselves machine readable, but they are *semantically versioned*, which lets us detect breaking changes and make simplifying assumptions about the behavior of directives during processing.
+It may seem that core schemas don't do much on their own, and that's because don't! The core specification simply provides a way to clearly identify what a document *means* by a directive of a particular name. The specification URLs which define this behavior are *not* themselves machine readable, but they are *semantically versioned*, which lets us detect breaking changes and make simplifying assumptions about the behavior of directives during processing.
 
 ### Previous names
 
