--- a/core-nomenclature.html
+++ b/core-nomenclature.html
@@ -147,10 +147,10 @@
 <div id=view>
 <main markdown>
 <header>
-  <h1>the state of constellation</h1>
+  <h1>introducing core schemas</h1>
 </header>
 
-Let's nail down some of the concepts and nomenclature circling around Project Constellation.
+Let's nail down some concepts and nomenclature.
 
 ## Core Schemas
 
