--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   </span>
 </a>
 
-Core schemas are standard GraphQL schemas which follow the [core specification](core/draft/pre-0). The [core spec]((core/draft/pre-0) provides machinery to reference namespaced, versioned directives to provide specified metadata to schema processors and data cores.
+Core schemas are standard GraphQL schemas which follow the [core specification](core/draft/pre-0). The [core spec]((core/draft/pre-0) provides machinery to reference namespaced, versioned directives which provide specified metadata to schema processors and data cores.
 
-All the other specifications in this library are core-compliant specs. They can be referenced within core schemas to provide specified metadata to processors and data cores.
+All other specifications in this library are core-compliant specs, designed to be referenced from core schemas.
 
 ### Joining and Linking
 <a class=spec href=join/draft/pre-0>
