Remove join schemas.

--- a/index.html
+++ b/index.html
@@ -149,18 +149,11 @@ The subset of a [core schema](#def-core-schema) which should *not* be served to 
         <i>"Our API <b>joins</b> our <code>auth</code>, <code>users</code>, and <code>movies</code> graphs."</i>
       </p>
 
-    <li>the act of combining multiple GraphQL schema *definitions* into a single definition.
+    <li>the act of combining multiple GraphQL *definitions* into a single definition.
       <p>
         <i>"Our API's <code>User</code> type <b>joins</b> fields from the <code>users</code> and <code>movies</code> graphs."</i>
       </p>
   </ol>
-</dd>
-
-<dt id=def-join-schema>join schema, n.</dt>
-<dd markdown>
-A [core schema](#def-core-schema) which uses the [join spec](/join/draft/pre-0) to describe a [supergraph](#def-supergraph) which is made up of one or more [subgraphs](#def-subgraph).
-
-*aka: composed schema*
 </dd>
 
 <dt id=def-subgraph>subgraph, n.</dt>
