Updates for spec-md.

--- a/core-nomenclature.html
+++ b/core-nomenclature.html
@@ -5,10 +5,8 @@
 <div id=view>
 <main markdown>
 <header>
-  <h1>introducing core schemas</h1>
+  <h1>Why Core Schemas?</h1>
 </header>
-
-Let's nail down some concepts and nomenclature.
 
 ## Core Schemas
 
