Remove hover underline from logo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     margin-top: 1rem;
   }
 
+  .apollo-specs-logo-container a:hover {
+    text-decoration: none;
+  }
+
   .apollo-logo {
     margin-top: 0.1rem;
     color: var(--black-lighter);
