Update core links to point to v0.1

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
   ## Specifications
 
   ### Core Schemas
-  <a class=spec href=core/draft/pre-0>
+  <a class=spec href=core/v0.1>
     <span class=name>core</span>
     <span class=tag>
       GraphQL schemas with interoperable metadata
     </span>
   </a>
 
-  Core schemas are standard GraphQL schemas which follow the [core specification](core/draft/pre-0). The [core spec](core/draft/pre-0) provides machinery to reference namespaced, versioned directives which provide specified metadata to schema processors and data cores.
+  Core schemas are standard GraphQL schemas which follow the [core specification](core/v0.1). The [core spec](core/v0.1) provides machinery to reference namespaced, versioned directives which provide specified metadata to schema processors and data cores.
 
   All other specifications in this library are core-compliant specs, designed to be referenced from core schemas.
 
@@ -136,7 +136,7 @@
   <dl class=glossary>
   <dt id=def-core-schema><h3>core schema, n.</h3></dt>
   <dd markdown>
-  A GraphQL schema document which follows the [core schema specification](/core/draft/pre-0). Core schemas provide [specified metadata](#def-metadata) to [processors](#def-processor) and [data core](#def-data-core) by [referencing specifications](/core/draft/pre-0#core__Using).
+  A GraphQL schema document which follows the [core schema specification](/core/v0.1). Core schemas provide [specified metadata](#def-metadata) to [processors](#def-processor) and [data core](#def-data-core) by [referencing specifications](/core/v0.1#core__Using).
   </dd>
 
   <dt id=def-export-schema>export schema, n.</dt>
