Spec links should have trailing slashes to prevent extra redirects
Without these the specs.apollo.dev proxy we have setup will first
trigger a redirect, which will then cause the
apollo-specs.github.io GH pages domain to be used instead.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   ## Specifications
 
   ### Core Schemas
-  <a class=spec href=core/v0.1>
+  <a class=spec href="core/v0.1/">
     <span class=name>core</span>
     <span class=tag>
       GraphQL schemas with interoperable metadata
@@ -124,7 +124,7 @@
   All other specifications in this library are core-compliant specs, designed to be referenced from core schemas.
 
   ### Joining and Linking
-  <a class=spec href=join/draft/pre-0>
+  <a class=spec href="join/draft/pre-0/">
     <span class=name>join</span>
     <span class=tag>
       for joining subgraphs into a supergraph
@@ -136,7 +136,7 @@
   <dl class=glossary>
   <dt id=def-core-schema><h3>core schema, n.</h3></dt>
   <dd markdown>
-  A GraphQL schema document which follows the [core schema specification](/core/v0.1). Core schemas provide [specified metadata](#def-metadata) to [processors](#def-processor) and [data core](#def-data-core) by [referencing specifications](/core/v0.1#core__Using).
+  A GraphQL schema document which follows the [core schema specification](/core/v0.1/). Core schemas provide [specified metadata](#def-metadata) to [processors](#def-processor) and [data core](#def-data-core) by [referencing specifications](/core/v0.1/#core__Using).
   </dd>
 
   <dt id=def-export-schema>export schema, n.</dt>
