--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <a class=spec href="tag/">
     <span class=name>tag</span>
     <span class=tag>
-      for tagging schema elements with names
+      for tagging GraphQL schema elements with names
     </span>
   </a>
 
