Add redirects for new inaccessible spec (#16)
* Add redirects for new inaccessible spec

Also update GH URLs for existing specs which have migrated to the `apollographql` org.

* Add blurb and link from main page

Co-authored-by: Jesse Rosenberger <git@jro.cc>

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
     </span>
   </a>
 
+  ### Filtering
+  <a class=spec href="inaccessible/">
+    <span class=name>inaccessible</span>
+    <span class=tag>
+      for removing fields and types from a core schema
+    </span>
+  </a>
+
   ## Glossary
 
   <dl class=glossary>
