--- a/index.html
+++ b/index.html
@@ -1051,24 +1051,44 @@ pre[class*="language-"] {
     <svg class="apollo-logo apollo-logo-large" viewBox="0 0 979 293" class="eetev6l1 css-5i1btw"><g fill="currentColor" fill-rule="nonzero"><path d="M159.4 83.1H130L87.5 195.4h26.6l6.9-19h40.1l-7.3-21h-26.4l17.2-48.3 30.6 88.4h26.6zM606.3 195.3V83.1H630v91.2h46.6v21zM742.6 195.3V83.1h23.6v91.2h46.6v21zM475.4 103.2c19.5 0 35.5 16.2 35.5 36.1 0 19.9-15.9 36.1-35.5 36.1-19.5 0-35.4-16.2-35.4-36.1 0-19.9 15.9-36.1 35.4-36.1zm0-22c-31.5 0-57 26-57 58.1s25.5 58.1 57 58.1 57-26 57-58.1-25.5-58.1-57-58.1zM921.5 103.2c19.6 0 35.5 16.2 35.5 36.1 0 19.9-15.9 36.1-35.5 36.1-19.5 0-35.4-16.2-35.4-36.1-.1-19.9 15.8-36.1 35.4-36.1zm0-22c-31.5 0-57 26-57 58.1s25.5 58.1 57 58.1 57-26 57-58.1-25.5-58.1-57-58.1zM322 83.1h-51.4v112.3h23.5v-38.6H322c19.6 0 35.5-16.9 35.5-36.8 0-20.1-15.9-36.9-35.5-36.9zm0 51.6h-27.9V105H322c7.7 0 13.9 7 13.9 14.8 0 7.9-6.2 14.9-13.9 14.9z"></path><path d="M250.4 229.4c-2 0-3.8 1-4.9 2.6 0 0-5.3 6.2-8.2 9.1-12.1 12.3-26.1 21.9-41.8 28.7-16.2 7-33.4 10.5-51.2 10.5-17.8 0-35-3.5-51.2-10.5-15.6-6.8-29.7-16.5-41.8-28.8-12.1-12.3-21.6-26.6-28.2-42.6-6.9-16.5-10.3-34-10.3-52.1s3.5-35.6 10.3-52.1c6.6-15.9 16.1-30.3 28.2-42.6 12.1-12.3 26.1-22 41.8-28.7 16.2-7 33.4-10.5 51.2-10.5 17.8 0 35 3.5 51.2 10.5 11.4 4.9 22 11.4 31.5 19.3-.5 1.5-.8 3.2-.8 4.9 0 8.3 6.6 15.1 14.8 15.1 8.2 0 14.8-6.8 14.8-15.1S249.2 32 241 32c-2 0-4 .4-5.7 1.2C210.5 12.5 178.8.1 144.3.1 65 .2.7 65.6.7 146.4c0 80.8 64.3 146.2 143.6 146.2 44.4 0 84-20.5 110.4-52.7 1.1-1.1 1.8-2.7 1.8-4.4-.1-3.4-2.8-6.1-6.1-6.1z"></path></g></svg>
   </div>
 </header>
-<link rel=stylesheet href=https://specs.apollo.dev/apollo-light.css>
-<script type=module async defer src=https://specs.apollo.dev/inject-logo.js></script>
+<link rel=stylesheet href=/apollo-light.css>
 </section>
 <nav class="spec-toc">
 <div class="title">Contents</div>
 <ol>
-<li><a href="#sec-Current-Specs"><span class="spec-secid">1</span>Current Specs</a></li>
+<li><a href="#sec-Current-Specs"><span class="spec-secid">1</span>Current Specs</a><ol>
+<li><a href="#sec-Core-Schemas-v1-0"><span class="spec-secid">1.1</span>Core Schemas v1.0</a></li>
+<li><a href="#sec-link-v1-0"><span class="spec-secid">1.2</span>link v1.0</a></li>
+<li><a href="#sec-join-v0-1"><span class="spec-secid">1.3</span>join v0.1</a></li>
+<li><a href="#sec-tag-v0-1"><span class="spec-secid">1.4</span>tag v0.1</a></li>
+<li><a href="#sec-inaccessible-v0-1"><span class="spec-secid">1.5</span>inaccessible v0.1</a></li>
+</ol>
+</li>
 </ol>
 </nav>
 </header>
 <section id="sec-Current-Specs" secid="1">
 <h1><span class="spec-secid" title="link to this section"><a href="#sec-Current-Specs">1</a></span>Current Specs</h1>
-<ul>
-<li><a href="link/v1.0">link v1.0</a> provides the foundation of core schemas&mdash;GraphQL schemas for the global graph. Core schemas use <a href="link/v1.0">specified conventions</a> to link definitions from other schemas. All the other specs in this library rely on core schema conventions.</li>
-<li><a href="join/v0.1">join v0.1</a> describes supergraphs which join types from one or more subgraphs</li>
-<li><a href="tag/v0.1">tag v0.1</a> attaches a single piece of string metadata to various GraphQL definitions (it is mainly used for contracts)</li>
-<li><a href="inaccessible/v0.1">inaccessible v0.1</a> masks fields and types from a graph&rsquo;s public API</li>
-</ul>
+<section id="sec-Core-Schemas-v1-0" secid="1.1">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-Core-Schemas-v1-0">1.1</a></span>Core Schemas v1.0</h2>
+<p><a href="/core/v1.0">Core Schemas</a> are schemas for the global graph. Core schemas know their position in the global graph and use <a href="/core/v1.0">specified conventions</a> to link definitions from other schemas in the global graph. Core schemas not a new syntax or document type&mdash;they are a set of namespacing conventions and algorithms applied to standard GraphQL schemas.</p>
+</section>
+<section id="sec-link-v1-0" secid="1.2">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-link-v1-0">1.2</a></span>link v1.0</h2>
+<p><a href="/link/v1.0">link v1.0</a> provides <span class="spec-call"><a href="/link/v1.0#@link" data-name="@link">@link</a></span> and <span class="spec-call"><a href="/link/v1.0#@id" data-name="@id">@id</a></span>, the fundamental core schema linking directives.</p>
+</section>
+<section id="sec-join-v0-1" secid="1.3">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-join-v0-1">1.3</a></span>join v0.1</h2>
+<p><a href="/join/v0.1">join v0.1</a> declaratively describes joins between types in a supergraph.</p>
+</section>
+<section id="sec-tag-v0-1" secid="1.4">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-tag-v0-1">1.4</a></span>tag v0.1</h2>
+<p><a href="tag/v0.1">tag v0.1</a> attaches a single piece of string metadata to various GraphQL definitions (it is mainly used for contracts)</p>
+</section>
+<section id="sec-inaccessible-v0-1" secid="1.5">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-inaccessible-v0-1">1.5</a></span>inaccessible v0.1</h2>
+<p><a href="inaccessible/v0.1">inaccessible v0.1</a> masks fields and types from a graph&rsquo;s public API</p>
+</section>
 </section>
 </article>
 <footer>
@@ -1077,7 +1097,16 @@ Written in <a href="https://spec-md.com" target="_blank">Spec Markdown</a>.</foo
 <div class="spec-sidebar" aria-hidden>
 <div class="spec-toc">
 <div class="title"><a href="#">Apollo Library of Technical Specifications</a></div>
-<ol><li id="_sidebar_1"><a href="#sec-Current-Specs"><span class="spec-secid">1</span>Current Specs</a></li>
+<ol><li id="_sidebar_1"><a href="#sec-Current-Specs"><span class="spec-secid">1</span>Current Specs</a>
+<input hidden class="toggle" type="checkbox" id="_toggle_1" /><label for="_toggle_1"></label>
+<ol>
+<li id="_sidebar_1.1"><a href="#sec-Core-Schemas-v1-0"><span class="spec-secid">1.1</span>Core Schemas v1.0</a></li>
+<li id="_sidebar_1.2"><a href="#sec-link-v1-0"><span class="spec-secid">1.2</span>link v1.0</a></li>
+<li id="_sidebar_1.3"><a href="#sec-join-v0-1"><span class="spec-secid">1.3</span>join v0.1</a></li>
+<li id="_sidebar_1.4"><a href="#sec-tag-v0-1"><span class="spec-secid">1.4</span>tag v0.1</a></li>
+<li id="_sidebar_1.5"><a href="#sec-inaccessible-v0-1"><span class="spec-secid">1.5</span>inaccessible v0.1</a></li>
+</ol>
+</li>
 </ol>
 </div>
 <script>(function(){var e,t=[],n=document.querySelector('label[for="spec-sidebar-toggle"]');function o(e){e.preventDefault()}n.addEventListener("scroll",o),n.addEventListener("touchmove",o);for(var i=document.getElementsByTagName("section"),r=0;r<i.length;r++)i[r].getAttribute("secid")&&t.push(i[r]);var c=window.scrollY,l=!1;function d(n){for(var o,i=n+document.documentElement.clientHeight/4,r=t.length-1;r>=0;r--)if(t[r].offsetTop<i){o=t[r];break}var c=o&&o.getAttribute("secid");c!==e&&(e&&a(e,!1),c&&a(c,!0),e=c)}function a(e,t){document.getElementById("_sidebar_"+e).className=t?"viewing":"";for(var n=e.split(".");n.length;){var o=document.getElementById("_sidebar_toggle_"+n.join("."));o&&(o.checked=t),n.pop()}}window.addEventListener("scroll",(function(e){c=window.scrollY,l||(l=!0,window.requestAnimationFrame((function(){d(c),l=!1})))})),d(window.scrollY);})()</script>
